[gd_scene load_steps=4 format=3 uid="uid://c6s1v10ikdrjn"]

[ext_resource type="Script" uid="uid://d3oahsst2dldh" path="res://palikka.gd" id="1_xgv7p"]

[sub_resource type="BoxMesh" id="BoxMesh_207hd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_h1wm4"]

[node name="palikka" type="Node3D" groups=["palikat"]]
script = ExtResource("1_xgv7p")

[node name="wall1" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_207hd")

[node name="Area3D" type="Area3D" parent="wall1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall1/Area3D"]
shape = SubResource("BoxShape3D_h1wm4")

[node name="wall2" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_207hd")

[node name="Area3D" type="Area3D" parent="wall2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall2/Area3D"]
shape = SubResource("BoxShape3D_h1wm4")

[node name="wall3" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_207hd")

[node name="Area3D" type="Area3D" parent="wall3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall3/Area3D"]
shape = SubResource("BoxShape3D_h1wm4")

[node name="movTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="rotTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
